--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,14 @@
-version: "3.8"
-
 services:
   backend:
     build: ./back
     ports:
       - "5000:5000"
-    environment:
-      - NODE_ENV=production
-    depends_on:
-      - frontend
+    env_file:
+      - ./back/.env
   
   frontend:
     build: ./front
     ports:
-      - "5173:80"
+      - "3000:80"
     depends_on:
       - backend
