--- a/.github/workflows/main_task-manager-application.yml
+++ b/.github/workflows/main_task-manager-application.yml
@@ -1,7 +1,12 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
+
+
 name: Build and deploy Node.js app to Azure Web App - task-manager-application
+
+
 
 on:
   push:
@@ -25,17 +30,20 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd back
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd back
+          zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: node-task-app-backend
           path: release.zip
 
   deploy:
@@ -44,15 +52,17 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
+
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: node-task-app-backend
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
@@ -60,9 +70,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_309D36B0365547B989985474BB35D889 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9555086C24C64FF38C4245EDE2ACE5F8 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3F4FE5D615E74D54968852C159277E1F }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
@@ -71,4 +81,3 @@ jobs:
           app-name: 'task-manager-application'
           slot-name: 'Production'
           package: .
-          
