--- a/.github/workflows/main_task-manager-application.yml
+++ b/.github/workflows/main_task-manager-application.yml
@@ -65,10 +65,11 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          identity: true
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          allow-no-subscriptions: true
+          auth-type: IDENTITY
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
