--- a/.github/workflows/main_task-manager-application.yml
+++ b/.github/workflows/main_task-manager-application.yml
@@ -1,3 +1,7 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - task-manager-application
 
 on:
@@ -58,11 +62,14 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure using Federated Identity
+      - name: Login to Azure
         uses: azure/login@v2
         with:
           identity: true
-          allow-no-subscriptions: true
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          auth-type: 'federated'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
