--- a/.github/workflows/main_task-manager-application.yml
+++ b/.github/workflows/main_task-manager-application.yml
@@ -69,7 +69,7 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
-          auth-type: 'federated'
+          auth-type: 'IDENTITY'
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
